UXP export layers

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 sample-projects/Pegasus/Solar2D/src/App/bookCopy
 doc/hugo
+develop/UXP/kwik-exporter/node_modules/
+develop/UXP/kwik-exporter/dist/
