--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ sample-projects/Pegasus/Solar2D/src/App/bookCopy
 doc/hugo
 develop/UXP/kwik-exporter/node_modules/
 develop/UXP/kwik-exporter/dist/
+develop/dist/
