--- a/develop/UXP/kwik-exporter/plugin/manifest.json
+++ b/develop/UXP/kwik-exporter/plugin/manifest.json
@@ -1,6 +1,6 @@
 {
   "id": "react-styles",
-  "name": "UXP React Styles",
+  "name": "Kwik Exporter",
   "version": "1.0.0",
   "main": "main.js",
   "manifestVersion": 4,
@@ -12,7 +12,7 @@
     {
       "type": "panel",
       "id": "uxpstyles",
-      "label": { "default": "UXP React Styles" },
+      "label": { "default": "Kwik Exporter" },
       "minimumSize": { "width": 100, "height": 100 },
       "maximumSize": { "width": 1640, "height": 816 },
       "preferredDockedSize": { "width": 340, "height": 516 },
