In Progress export code, TODO order layers of layerSet, clean parseValue etc in .lua

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ doc/hugo
 develop/UXP/kwik-exporter/node_modules/
 develop/UXP/kwik-exporter/dist/
 develop/dist/
+develop/UXP/kwik-exporter/plugin/kwik/Solar2D
