In Progress UXP Publish All to drag and drop for sorting

--- a/develop/UXP/kwik-exporter/package.json
+++ b/develop/UXP/kwik-exporter/package.json
@@ -35,13 +35,25 @@
     "webpack-obfuscator": "^3.3.0"
   },
   "dependencies": {
+    "@react-aria/dnd": "^3.0.0-alpha.9",
+    "@react-aria/focus": "^3.6.0",
+    "@react-aria/listbox": "^3.5.0",
+    "@react-aria/selection": "^3.9.0",
+    "@react-stately/collections": "^3.4.0",
+    "@react-stately/data": "^3.5.0",
+    "@react-stately/dnd": "^3.0.0-alpha.7",
+    "@react-stately/list": "^3.5.0",
+    "@react-types/shared": "^3.13.0",
+    "@spectrum-icons/workflow": "^4.0.0",
     "@types/photoshop": "^23.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "history": "^5.0.0",
     "lua-fmt": "^2.6.0",
     "mustache": "^4.2.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
