doc get started

--- a/develop/UXP/kwik-exporter/plugin/manifest.json
+++ b/develop/UXP/kwik-exporter/plugin/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "react-styles",
+  "id": "com.kwiksher.kwik5.dev-ps",
   "name": "Kwik Exporter",
   "version": "1.0.0",
   "main": "main.js",
