--- a/develop/UXP/kwik-exporter/package.json
+++ b/develop/UXP/kwik-exporter/package.json
@@ -50,6 +50,7 @@
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "history": "^5.0.0",
+    "js-hira-kata-romanize": "^1.0.5",
     "lua-fmt": "^2.6.0",
     "mustache": "^4.2.0",
     "react": "^17.0.2",
