--- a/Solar2D/build.settings
+++ b/Solar2D/build.settings
@@ -1,20 +1,13 @@
-settings =
-{
-  {{if(options.splashCtl)}}
-    splashScreen =
-    {
-        enable = true,
-        image = "mySplashScreen.png"
-    },
-  {{/if}}
-  plugins  =
-  {
-    {{if(options.iap)}}
+settings = {
+    plugins  =  {
         ["plugin.zip"] =
         {
             publisherId = "com.coronalabs",
         },
-        --Google in app billing v3
+--        ["plugin.KwikShelf"] = {
+--            publisherId = "com.kwiksher",
+--        },
+    --Google in app billing v3
         ["plugin.google.iap.v3"] = {
             -- required
             publisherId = "com.coronalabs",
@@ -25,148 +18,38 @@ settings =
             publisherId = "com.coronalabs",
             supportedPlatforms = { ["android-kindle"]=true }
         },
-    {{/if}}
-    {{if(options.adMob)}}
-      ["plugin.google.play.services"] =
-      {
-         publisherId = "com.coronalabs",
-         supportedPlatforms = { android =true }
-      },
-    {{/if}}
-  },
-
-  android  =
-  {
-    {{if(options.expansion)}}
-      usesExpansionFile  = true,
-    {{/if}}
-    usesPermissions  =
-    {
-      {{if(options.recordAudio)}}
-      "android.permission.RECORD_AUDIO",
-      {{/if}}
-      "android.permission.WRITE_EXTERNAL_STORAGE",
-      {{if(options.iap)}}
-        "com.android.vending.BILLING",
-      {{/if}}
-      {{if(options.hasWeb)}}
-        "android.permission.INTERNET",
-      {{/if}}
-      {{if(options.adMob)}}
-        "android.permission.ACCESS_NETWORK_STATE",
-        "android.permission.READ_PHONE_STATE",
-      {{/if}}
-      {{if(options.expansion)}}
-        "com.android.vending.CHECK_LICENSE",
-      {{/if}}
-      {{if(options.camera)}}
-      "android.permission.CAMERA",
-      {{/if}}
-      {{if(options.location)}}
-      "android.permission.ACCESS_FINE_LOCATION",
-      "android.permission.ACCESS_COARSE_LOCATION",
-      {{/if}}
     },
-    usesFeatures =
-    {
-      {{if(options.camera)}}
-        { name="android.hardware.camera", required=false },
-      {{/if}}
-      {{if(options.recordAudio)}}
-        { name="android.hardware.microphone", required=false },
-      {{/if}}
-      {{if(options.location)}}
-        { name = "android.hardware.location", required = false },
-        { name = "android.hardware.location.gps", required = false },
-        { name = "android.hardware.location.network", required = false }
-      {{/if}}
+    android  = {
+      usesPermissions  = {
+          "android.permission.INTERNET",
+          "android.permission.WRITE_EXTERNAL_STORAGE",
+          "com.android.vending.BILLING",
+          },
     },
-  },
-  orientation =
-  {
-  default = "{{ori}}",
-  {{if(options.portraitUpsideDown)}}
-    supported = { "portrait", "portraitUpsideDown" },
-  {{/if}}
-  {{if(options.landscapeUpsideDown)}}
-    supported = { "landscapeLeft", "landscapeRight" },
-  {{/if}}
-  },
-  iphone =
-  {
-    xcassets = "Images.xcassets",
-    plist=
+    orientation =  {
+      default = "landscapeRight",
+    },
+    iphone =
     {
-      {{if(options.impFont)}}
-        UIAppFonts  =
+        xcassets = "Images.xcassets",
+        plist=
         {
-          {{if(options.fileArr)}}
-            "{{fileName}}",
-          {{/if}}
+                NSAppTransportSecurity = {
+            NSExceptionDomains = {
+                            [""] = {
+                    NSIncludesSubdomains = true,
+                    NSThirdPartyExceptionAllowsInsecureHTTPLoads = true
+                },
+                }
         },
-      {{/if}}
-
-
-
-
-
-      {{if(options.exceptionDomains)}}
-      NSAppTransportSecurity = {
-          NSExceptionDomains = {
-            {{if(options.domainArr)}}
-              ["{{domain}}"] = {
-                  NSIncludesSubdomains = true,
-                  NSThirdPartyExceptionAllowsInsecureHTTPLoads = true
-              },
-            {{/if}}
-          }
-      },
-      {{/if}}
-      UIStatusBarHidden = true,
-      UILaunchStoryboardName = "LaunchScreen",
-  {{if(options.lang)}}
-      CFBundleLocalizations =
-      {
-        {{if(options.langArr)}}
-          "{{langID}}",
-        {{/if}}
-      },
-
-      CFBundleDisplayName = "{{appName}}",
-      CFBundleName = "{{appName}}",
-
-      {{if(options.accel)}}
-      NSMotionUsageDescription = "This app would like to access the accelerometer.",
-      {{/if}}
-
-      {{if(options.location)}}
-      NSLocationAlwaysUsageDescription = "This app would like to use location services.",
-      NSLocationWhenInUseUsageDescription = "This app would like to use location services.",
-      {{/if}}
-
-      {{if(options.recordAudio)}}
-      NSMicrophoneUsageDescription = "This app would like to access the microphone.",
-      {{/if}}
-
-      {{if(options.camera)}}
-      NSCameraUsageDescription = "This app would like to access the camera.",
-      NSPhotoLibraryUsageDescription = "This app would like to access the photo library.",
-      NSPhotoLibraryAddUsageDescription = "This app would like to add the photo library.",
-      {{/if}}
-
-      {{if(options.video)}}
-      NSCameraUsageDescription = "This app would like to access the camera.",
-      NSPhotoLibraryUsageDescription = "This app would like to access the photo library.",
-      NSPhotoLibraryAddUsageDescription = "This app would like to add the photo library.",
-      {{/if}}
-   {{/if}}
+        UIStatusBarHidden = true,
+        UILaunchStoryboardName = "LaunchScreen",
+        },
     },
-  },
-  excludeFiles =
+    excludeFiles =
     {
         -- Exclude all files at all paths which end with "secret.txt"
-        all = {  "Icon*.png", "Images.xcassets", "Icon*.ico", "Icon*.icns", "*.vbs", "*.bat", "*.command" },
+        all = {  "Icon*.png", "Images.xcassets", "Icon*.ico", "Icon*.icns", "*.vbs", "*.bat", "*.command", "copy_projects" },
         android = { "LaunchScreen.storyboardc" },
     },
 }
-
