--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Solar2D/App/bookFree
 BookServer/compress_assets_bookFree.command
 BookServer/compress_assets_bookOne.command
 BookServer/copyright.txt
+Photoshop/DeskTopIcon
+errors.txt
