Add template layer_image.lua

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ BookServer/compress_assets_bookOne.command
 BookServer/copyright.txt
 Photoshop/DeskTopIcon
 errors.txt
+Solar2D/editor/template/assets
