Add backup/undo lua

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ Photoshop/DeskTopIcon
 errors.txt
 Solar2D/editor/template/assets
 Solar2D/models
+backup_lua.command
+copy_lua.command
+undo_lua.command
