WIP sync audio & text

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Solar2D/models
 backup_lua.command
 copy_lua.command
 undo_lua.command
+Solar2D/server/tests/outputRedirection.json
+Solar2D/server/tests/outputRedirection_en.json
+Solar2D/server/tests/outputRedirection_jp.json
