FIX copy paste a class

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ undo_lua.command
 Solar2D/server/tests/outputRedirection.json
 Solar2D/server/tests/outputRedirection_en.json
 Solar2D/server/tests/outputRedirection_jp.json
+tmp.log
