xeus copy action(event)

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Solar2D/server/tests/outputRedirection.json
 Solar2D/server/tests/outputRedirection_en.json
 Solar2D/server/tests/outputRedirection_jp.json
 tmp.log
+io-checkpoint.ipynb
